--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
     "tailwindcss": "^4.1.17"
